[package]
name = "lnk"
version = "0.5.1"
authors = [
    "Lily Hopkins <bsalarius@gmail.com>",
    "Simon Buchan <simon.buchan.nz@gmail.com>",
]
edition = "2021"
description = "A Rust library to parse and write Windows shortcut files (.lnk)"
license = "MIT"
repository = "https://github.com/lilopkins/lnk-rs"

[dependencies]
log = "0.4.11"
bitflags = "1.2.1"
byteorder = "1.3.4"
chrono = "0.4.23"
packed_struct = "0.10.1"

[dev-dependencies]
pretty_env_logger = "0.4.0"
