[package]
name = "lnk"
version = "0.5.1"
authors = [
    "Lily Hopkins <bsalarius@gmail.com>",
    "Simon Buchan <simon.buchan.nz@gmail.com>",
]
edition = "2021"
description = "A Rust library to parse and write Windows shortcut files (.lnk)"
license = "MIT"
repository = "https://github.com/lilopkins/lnk-rs"

[features]
default = []
experimental_save = []

[[example]]
name = "create_lnk"
required-features = ["experimental_save"]

[[test]]
name = "create-read-blank"
required-features = ["experimental_save"]

[dependencies]
log = "0.4.11"
bitflags = "2.4"
byteorder = "1.3.4"
chrono = "0.4.23"
num-traits = "0.2.14"
num-derive = "0.4"
binread = "2"
getset = "0.1"

[dev-dependencies]
pretty_env_logger = "0.5.0"
