[package]
name = "lnk"
version = "0.5.1"
authors = [
    "Lily Hopkins <bsalarius@gmail.com>",
    "Simon Buchan <simon.buchan.nz@gmail.com>",
]
edition = "2021"
description = "A Rust library to parse and write Windows shortcut files (.lnk)"
license = "MIT"
repository = "https://github.com/lilopkins/lnk-rs"

[features]
default = ["serde"]
experimental_save = []
serde=["dep:serde", "serde_json", "serde_bytes"]
lnk2json=["serde", "clap", "simplelog", "clap-verbosity-flag", "clio", "anyhow"]


[[bin]]
name = "lnk2json"
path = "src/bin/lnk2json/main.rs"
required-features = ["lnk2json"]

[[example]]
name = "create_lnk"
required-features = ["experimental_save"]

[[test]]
name = "create-read-blank"
required-features = ["experimental_save"]

[dependencies]
log = "0.4.11"
bitflags = {version="2.4", features=["serde"]}
byteorder = "1.3.4"
chrono = "0.4.23"
num-traits = "0.2.14"
num-derive = "0.4"
binread = "2"
getset = "0.1"
thiserror = "1.0"
encoding_rs = "0.8"
uuid = "1.7"

serde = { version = "1.0", features = ["derive"], optional=true }
serde_json = {version = "1", optional=true}
serde_bytes = {version = "0", optional=true}

clap = {version = "4", features = ["derive", "wrap_help", "cargo"], optional=true }
simplelog = {version="0.12", optional=true}
clap-verbosity-flag = {version="2.0.0", optional=true}
clio = {version="0.3", features=["clap-parse"], optional=true }
anyhow = {version="1.0", optional=true}

[dev-dependencies]
pretty_env_logger = "0.5.0"
